# optymalizacja_capstone

./: CMakeLists.txt  README.md  candidates  main.cpp
